エラーチェック追加 + send.phpに渡す用にhidden追加

--- a/css/mailform.css
+++ b/css/mailform.css
@@ -125,3 +125,7 @@ input[type="button"][value="戻る"]{
     padding-bottom: 12px;
     border-bottom: 1px solid  #ccc;
 }
+
+.err{
+    color: red;
+}
