--- a/css/mailform.css
+++ b/css/mailform.css
@@ -62,6 +62,12 @@ dd textarea{
     border: 1px solid #ddd;
 }
 
+.mailform dd input[type="radio"]{
+    width: 16px;
+    height: 16px;
+    margin-bottom: 5px;
+}
+
 .mailform dd textarea{
     width: 500px;
     height: 120px;
