--- a/css/mailform.css
+++ b/css/mailform.css
@@ -49,7 +49,7 @@ h1::before {
 }
 
 .mailform dd{
-    margin-bottom: 14px;
+    margin-bottom: 25px;
 }
 
 .mailform dd input[type="text"],
@@ -62,10 +62,16 @@ dd textarea{
     border: 1px solid #ddd;
 }
 
-.mailform dd input[type="radio"]{
+.mailform dd input[type="radio"],
+.mailform dd input[type="checkbox"]{
     width: 16px;
     height: 16px;
     margin-bottom: 5px;
+}
+
+.mailform dd .nest{
+    padding-left: 45px;
+    margin: 10px 0;
 }
 
 .mailform dd textarea{
@@ -117,8 +123,7 @@ input[type="button"][value="戻る"].single{
 }
 
 .submit_content dt{
-    width: 140px;
-    margin-bottom: 25px;
+    margin-bottom: 10px;
     padding-bottom: 12px;
     float: left;
     text-align: right;
@@ -128,8 +133,7 @@ input[type="button"][value="戻る"].single{
 .submit_content dd{
     width: 340px;
     float: right;
-    float: 15px;
-    margin-bottom: 25px;
+    margin: 0 0 25px 15px;
     padding-bottom: 12px;
     border-bottom: 1px solid  #ccc;
 }
