--- a/mailform/css/confirmation.css
+++ b/mailform/css/confirmation.css
@@ -40,7 +40,45 @@ h1::before {
 	background: linear-gradient(-45deg, transparent, #ccc 10%, #ccc 90%, transparent);
 }
 
-.mailform dl{
+
+.submit_area{
+    margin-top: 45px;
+    text-align: center;
+}
+
+input[type="submit"][value="送信"]{
+    font-family: inherit;
+    padding: 10px 30px;
+    font-size: 16px;
+    background: none;
+    border-radius: 8px;
+    border: none;
+    background: #5d3fff;
+    color: #fff;
+}
+
+input[type="button"][value="戻る"]{
+    font-family: inherit;
+    margin-left: 15px;
+    padding: 10px 30px;
+    font-size: 16px;
+    background: none;
+    border-radius: 8px;
+    border: 1px solid #5d3fff;
+    color: #5d3fff;
+    display: inline-block;
+}
+
+input[type="button"][value="戻る"].single{
+    margin-left: 0;
+}
+
+.confirmation{
+    margin-bottom: 40px;
+}
+
+
+.submit_content dl{
     height: auto;
     padding: 12px;
     background: #f9f9f9;
@@ -51,14 +89,14 @@ h1::before {
     display: table;
 }
 
-.mailform dt{
+.submit_content dt{
     width: 180px;
     height: 100%;
     display: table-cell;
     vertical-align: middle;
 }
 
-.mailform dd{
+.submit_content dd{
     width: 380px;
     height: 100%;
     padding-left: 8px;
@@ -67,49 +105,11 @@ h1::before {
     vertical-align: middle;
 }
 
-.mailform dd input[type="text"],
-.mailform dd select,
-dd textarea{
-    width: 300px;
-    max-width: 100%;
-    font-family: inherit;
-    padding: 4px;
-    font-size: 14px;
-    border-radius: 6px;
-    border: 1px solid #ddd;
+.err{
+    color: red;
 }
 
-.mailform dd input[type="radio"],
-.mailform dd input[type="checkbox"]{
-    width: 16px;
-    height: 16px;
-    margin-bottom: 5px;
-}
-
-.mailform dd .nest{
-    padding-left: 45px;
-    margin: 10px 0;
-}
-
-.mailform dd textarea{
-    width: 350px;
-    height: 120px;
-    box-sizing: border-box;
-    resize: vertical;
-}
-
-.submit_area{
-    margin-top: 45px;
+.completion{
+    margin-bottom: 50px;
     text-align: center;
-}
-
-input[type="submit"][value="確認"]{
-    font-family: inherit;
-    padding: 10px 30px;
-    font-size: 16px;
-    background: none;
-    border-radius: 8px;
-    border: none;
-    background: #5d3fff;
-    color: #fff;
 }
