--- a/css/mailform.css
+++ b/css/mailform.css
@@ -68,18 +68,18 @@ dd textarea {
   width: 315px;
   max-width: 100%;
   font-family: inherit;
-  padding: 4px 9px;
+  padding: 7px 12px;
   font-size: 14px;
   background: #f4f4ff;
   border-radius: 4px;
-  border: none;
+  border: 1px solid #ddddea;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,.05);
 }
 
 .mailform dd input[type="radio"],
-.mailform dd input[type="checkbox"] {
-  width: 16px;
-  height: 16px;
-  margin-bottom: 5px;
+.mailform dd input[type="checkbox"]:{
+  box-shadow: none;
+  border: 5px solid #ccc;
 }
 
 .mailform dd .nest {
@@ -108,4 +108,9 @@ input[type="submit"][value="確認"] {
   border: none;
   background: #5d3fff;
   color: #fff;
+  cursor: pointer;
+}
+
+input[type="submit"][value="確認"]:hover {
+  opacity: .8;
 }
